--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,14 @@
 <html lang="uk">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="./favicon.ico" />
+    <link  type="image/png" rel="icon" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Продаж активних навушників для стрільби в Україні. Продаж GPS в Україні. Різний вибір. Швидка доставка"
+      content="Благодійна організація &#171Благодійний фонд &#171БВідчуй тепло&#187&#187. Ми допомагаємо нашим військовим, силам територіальної оборони та звичайним людям у забезпеченні першочергових медичних, соціальних та інших потреб. Кожен може долучитися до цієї вагомої справи та допомогти Україні одержати перемогу над силами зла."
     />
-    <title>Lend-Lease&#x2122</title>
+    <title>Відчуй тепло || Благодійний фонд - який об'єднує небайдужих людей задля допомоги Україні</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
